--- a/src/js/graphql_endpoint/package.json
+++ b/src/js/graphql_endpoint/package.json
@@ -21,7 +21,8 @@
     "graphql-type-json": "^0.3.1",
     "grpc": "^1.24.3",
     "jsonwebtoken": "^8.5.1",
-    "protobufjs": "^6.9.0"
+    "protobufjs": "^6.9.0",
+    "regex-escape": "^3.4.10"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.7.2",
